# tg

./: .gitignore  Makefile.am  README.md  configure.ac
.github/workflows/: release.yml
docs/: beatscope.1
icons/: Makefile.am  beatscope.desktop  beatscope.rc  beatscope.xml  make-icons.sh  make-msw-ico.sh
scripts/: generate_beatscope_icons.py
src/: audio.c  interface.c  output_panel.c  serializer.c  tg.h
