iconsdir = $(datadir)/icons/hicolor
nobase_dist_icons_DATA = \
			 16x16/apps/beatscope.png \
			 22x22/apps/beatscope.png \
			 32x32/apps/beatscope.png \
			 48x48/apps/beatscope.png \
			 64x64/apps/beatscope.png \
			 128x128/apps/beatscope.png \
			 256x256/apps/beatscope.png \
			 scalable/apps/beatscope.svg \
			 16x16/mimetypes/application-x-beatscope-data.png \
			 22x22/mimetypes/application-x-beatscope-data.png \
			 32x32/mimetypes/application-x-beatscope-data.png \
			 48x48/mimetypes/application-x-beatscope-data.png \
			 64x64/mimetypes/application-x-beatscope-data.png \
			 128x128/mimetypes/application-x-beatscope-data.png \
			 256x256/mimetypes/application-x-beatscope-data.png \
			 scalable/mimetypes/application-x-beatscope-data.svg
